# statistical-arb-timesfm

./: .env.example  .gitignore  README.md  pyproject.toml
api/: cache.py  dependencies.py  main.py  schemas.py
api/routers/: backtest.py  forecast.py  health.py  news.py  pairs.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/store/: usePairStore.ts
pipeline/: __init__.py
pipeline/backtest/: __init__.py  costs.py  engine.py  metrics.py
pipeline/data/: fetcher.py  universe.py
pipeline/model/: forecaster.py  loader.py
pipeline/reports/: generator.py
pipeline/stats/: cointegration.py  kalman.py  sentiment.py  signals.py  spread.py
scripts/: backtest_kalman.py  check_system.py  finetune_timesfm.py  plot_backtest.py  seed_pairs.py
tests/: test_backtest.py  test_fetcher.py  test_forecaster.py  test_stats.py
